Se corrigen los errores del ecommerce

--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -14,8 +14,15 @@
                     <a class="nav-link active" aria-current="page" href="/realtimeproducts">Realtime Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/chat">chatear en vivo</a>
+                    <a class="nav-link active" aria-current="page" href="/chat">Chatear en vivo</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/register">Registrar</a>
+                </li>
+                                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/login">Inicia sesión</a>
+                </li>
+
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
