--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -25,6 +25,7 @@
 
   <!-- Agregar el JS de SweetAlert -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+  <script src="js/registration.js"></script>
 </body>
 
 </html>
