--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/realtimeproducts">Realtime Products</a>
@@ -19,7 +19,7 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/register">Registrar</a>
                 </li>
-                                <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/login">Inicia sesión</a>
                 </li>
 
