--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -8,7 +8,7 @@
                             class="img-fluid" alt="Imagen de muestra">
                     </div>
                     <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                        <form action="/login" method="post">
+                        <form action="/api/login" method="post">
                             <div
                                 class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                                 <p class="lead fw-normal mb-0 me-3">Iniciar sesión con</p>
