--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -23,13 +23,10 @@
                                 <button type="button" class="btn btn-primary btn-floating mx-1">
                                     <i class="fab fa-linkedin-in"></i>
                                 </button>
-                            
-
-                                <a href="/api/auth/github" class="btn btn-primary btn-lg"
-                                    style="padding-left: 2.5rem; padding-right: 2.5rem;">
-                                    Login with GitHub
+                                <a href="/api/auth/github" class="btn btn-primary btn-floating mx-1">
+                                    <i class="fab fa-github text-dark"></i>
                                 </a>
-                                
+
                             </div>
 
                             <div class="divider d-flex align-items-center my-4">
