--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -22,6 +22,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/login">Inicia sesión</a>
                 </li>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="/api/logout">Cerrar sesión</a></li>
+                </ul>
 
             </ul>
             <form class="d-flex">
