Se agrega emailcontroller, email router, mailer services y view aun incompletos

--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -22,7 +22,11 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/login">Inicia sesión</a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../cart/cart.hbs">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+                </li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
